--- a/docs/.vitepress/theme/style.scss
+++ b/docs/.vitepress/theme/style.scss
@@ -1,13 +1,27 @@
-.VPHome {
-  // 定义遮罩样式
-  background: radial-gradient(ellipse,
-      rgba(var(--bg-gradient-home), 1) 0%,
-      rgba(var(--bg-gradient-home), 0) 150%);
+//.VPHome {
+//  // 定义遮罩样式
+//  background: radial-gradient(ellipse,
+//      rgba(var(--bg-gradient-home), 1) 0%,
+//      rgba(var(--bg-gradient-home), 0) 150%);
+//
+//  // 自定义首页背景图
+//  &::before {
+//    // 图片来源：https://zhuanlan.zhihu.com/p/54060187
+//    background-image: url(./assets/bg.webp);
+//    background-size: cover;
+//  }
+//}
 
-  // 自定义首页背景图
-  &::before {
-    // 图片来源：https://zhuanlan.zhihu.com/p/54060187
-    background-image: url(./assets/bg.webp);
-    background-size: cover;
+/*
+ 全局文章页面样式
+*/
+.VPDoc {
+  .content {
+    main {
+      // 文章图片取消默认最大高度
+      img {
+        max-height: unset;
+      }
+    }
   }
 }
